--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+// @import "bootstrap/scss/bootstrap";
+// @import "node_modules/primeng/resources/themes/lara-light-blue/theme.css";
+// @import "node_modules/primeng/resources/primeng.min.css";
+
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/primeng/resources/themes/lara-light-blue/theme.css";
+@import "../node_modules/primeng/resources/primeng.css";
