build components login registration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,1 @@
-<ul ngbNav class="nav-tabs">
-  <li ngbNavItem>
-    <button ngbNavLink>Button</button>
-  </li>
-  <li ngbNavItem>
-    <a ngbNavLink>Link</a>
-  </li>
-</ul>
-
-<div class="card flex justify-content-center">
-  <p-button label="Check" icon="pi pi-check"></p-button>
-</div>
+<router-outlet></router-outlet>
