--- a/src/app/components/registrazione/registrazione.component.html
+++ b/src/app/components/registrazione/registrazione.component.html
@@ -1,1 +1,55 @@
-<p>registrazione works!</p>
+<div class="min-vh-100 d-flex justify-content-center sfondo">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <div class="text-center">
+                    <p class="size-1 m-0">Handle</p>
+                    <p class="size-2 m-0">Your</p>
+                    <p class="size-1 m-0">C.V</p>
+                </div>
+
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-6">
+                <div>
+                    <form class=" border-black p-5 rounded-5 shadow">
+                        <div>
+                            <h2>Registrazione</h2>
+                        </div>
+
+                        <div class="form-group my-3">
+                            <label for="nome">Inserisci Nome</label>
+                            <input type="text" class="form-control" id="nome" aria-describedby="nome" name="nome"
+                                placeholder="Inserisci nome">
+
+                        </div>
+                        <div class="form-group my-3">
+                            <label for="cognome">Inserisci Cognome</label>
+                            <input type="text" class="form-control" id="cognome" aria-describedby="cognome"
+                                name="cognome" placeholder="Inserisci cognome">
+
+                        </div>
+                        <div class="form-group my-3">
+                            <label for="email">Inserisci Email</label>
+                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                                name="email" placeholder="Inserisci la tua email">
+
+                        </div>
+                        <div class="form-group my-3">
+                            <label for="password">Inserisci Password</label>
+                            <input type="password" class="form-control" id="password" placeholder="Inserisci password"
+                                name="password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Registrati</button>
+                        <div class="mt-3">
+                            <a (click)="this.goToLogin()" class="link pointer"> Sei già registrato? Effettua il
+                                login</a>
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
