--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,33 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../node_modules/primeng/resources/themes/lara-light-blue/theme.css";
 @import "../node_modules/primeng/resources/primeng.css";
+
+body {
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.shadow {
+  box-shadow: 5px 5px 25px rgb(188, 185, 185) !important;
+}
+
+.size-1 {
+  font-size: 5rem;
+  font-style: italic;
+}
+
+.size-2 {
+  font-size: 3rem;
+  font-style: italic;
+}
+
+.sfondo {
+  background-image: url("assets/images/sfondo_login.webp");
+  background-position: center;
+  background-size: cover;
+}
