--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,9 +6,9 @@
 // @import "node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../src/color.scss";
+@import "../node_modules/primeicons/primeicons.css";
 // @import "../node_modules/primeng/resources/themes/lara-light-blue/theme.css";
 // @import "../node_modules/primeng/resources/primeng.css";
-
 body {
   font-family: "Poppins", serif;
   font-weight: 400;
@@ -40,10 +40,11 @@ body {
 }
 
 .btn-primary {
-  border-radius: 0 !important;
+  border-radius: 10px !important;
   background-color: $color-1 !important;
   color: white !important;
   border: 1px solid grey !important;
+  box-shadow: 2px 2px 10px rgb(80, 78, 78);
 }
 
 .btn-primary:hover {
