--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@ body {
 }
 
 .shadow {
+  background-color: rgba(214, 214, 214, 0.653);
   box-shadow: 5px 5px 25px rgb(188, 185, 185) !important;
 }
 
@@ -41,14 +42,17 @@ body {
 
 .btn-primary {
   border-radius: 10px !important;
-  background-color: $color-1 !important;
+  background-color: $color-3 !important;
   color: white !important;
-  border: 1px solid grey !important;
-  box-shadow: 2px 2px 10px rgb(80, 78, 78);
+  border: 2px solid $color-3 !important;
+  font-weight: 600;
+  transition: background-color 0.2s ease-in-out, color 0.5s ease-in-out,
+    border 0.3s ease-in-out;
 }
 
 .btn-primary:hover {
-  background-color: $color-1-hover !important;
-  color: white !important;
-  border: 1px solid grey !important;
+  background-color: white !important;
+  font-weight: 600;
+  color: $color-3-hover !important;
+  border: 2px solid $color-3 !important;
 }
