--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,29 +12,29 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
-                <div>
-                    <form class=" border-black p-5 rounded-5 shadow">
-                        <div>
-                            <h2>Login</h2>
-                        </div>
-                        <div class="form-group my-3">
-                            <label for="email">Inserisci Email</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
-                                name="email" placeholder="Inserisci la tua email">
 
-                        </div>
-                        <div class="form-group my-3">
-                            <label for="password">Inserisci Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Inserisci password"
-                                name="password">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Login</button>
-                        <div class="mt-3">
-                            <a (click)="this.goToRegistrazione()" class="link pointer"> Non sei ancora registrato?
-                                Registrati</a>
-                        </div>
-                    </form>
-                </div>
+                <form class=" border-black p-5 rounded-5 shadow mb-4">
+                    <div>
+                        <h2>Login</h2>
+                    </div>
+                    <div class="form-group my-3">
+                        <label for="email">Inserisci Email</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email"
+                            placeholder="Inserisci la tua email">
+
+                    </div>
+                    <div class="form-group my-3">
+                        <label for="password">Inserisci Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Inserisci password"
+                            name="password">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                    <div class="mt-3">
+                        <a (click)="this.goToRegistrazione()" class="link pointer"> Non sei ancora registrato?
+                            Registrati</a>
+                    </div>
+                </form>
+
 
             </div>
         </div>
