--- a/src/app/components/registrazione/registrazione.component.html
+++ b/src/app/components/registrazione/registrazione.component.html
@@ -12,7 +12,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
 
-                <form class=" border-black p-5 rounded-5 shadow mb-4">
+                <form [formGroup]="form" (ngSubmit)="onSubmit()" class=" border-black p-5 rounded-5 shadow mb-4">
                     <div>
                         <h2>Registrazione</h2>
                     </div>
@@ -20,27 +20,104 @@
                     <div class="form-group my-3">
                         <label for="nome">Inserisci Nome</label>
                         <input type="text" class="form-control" id="nome" aria-describedby="nome" name="nome"
-                            placeholder="Inserisci nome">
+                            placeholder="Inserisci nome" formControlName="nome">
 
+                        <p class="text-danger" *ngIf="this.form.controls.nome.touched &&
+                             this.form.controls.nome.hasError('required')">
+                            Nome obbligatorio.
+                        </p>
+                        <p class="text-danger"
+                            *ngIf="this.form.controls.nome.touched &&
+                        this.form.controls.nome.hasError('minlength') ||  this.form.controls.nome.hasError('maxlength')">
+                            Il nome deve essere lungo minimo 2, massimo 100 caratteri.
+                        </p>
                     </div>
                     <div class="form-group my-3">
                         <label for="cognome">Inserisci Cognome</label>
                         <input type="text" class="form-control" id="cognome" aria-describedby="cognome" name="cognome"
-                            placeholder="Inserisci cognome">
-
+                            placeholder="Inserisci cognome" formControlName="cognome">
+                        <p class="text-danger" *ngIf="this.form.controls.cognome.touched &&
+                            this.form.controls.cognome.hasError('required')">
+                            Cognome obbligatorio.
+                        </p>
+                        <p class="text-danger"
+                            *ngIf="this.form.controls.nome.touched &&
+                    this.form.controls.cognome.hasError('minlength') ||  this.form.controls.cognome.hasError('maxlength')">
+                            Il cognome deve essere lungo minimo 2, massimo 100 caratteri.
+                        </p>
                     </div>
                     <div class="form-group my-3">
                         <label for="email">Inserisci Email</label>
                         <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email"
-                            placeholder="Inserisci la tua email">
-
+                            placeholder="Inserisci la tua email" formControlName="email">
+                        <p class="text-danger" *ngIf="this.form.controls.email.touched &&
+                            this.form.controls.email.hasError('required')">
+                            Email obbligatoria.
+                        </p>
+                        <p class="text-danger" *ngIf="this.form.controls.email.touched &&
+                            this.form.controls.email.hasError('pattern')">
+                            La mail deve essere nel formato: 'example&#64;gmail.com' or 'example&#64;aruba.it'
+                        </p>
                     </div>
                     <div class="form-group my-3">
                         <label for="password">Inserisci Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Inserisci password"
-                            name="password">
+                            name="password" formControlName="password">
+                        <p class="text-danger" *ngIf="this.form.controls.password.touched &&
+                            this.form.controls.password.hasError('required')">
+                            Password obbligatoria.
+                        </p>
+                        <p class="text-danger" *ngIf="this.form.controls.password.touched && 
+                        this.form.controls.password.hasError('pattern')">
+                            The password must contain at least one uppercase letter, one lowercase letter, one number
+                            and one special character between !&#64;#$%^&*()-+
+                        </p>
                     </div>
-                    <button type="submit" class="btn btn-primary">Registrati</button>
+                    <div class="form-group my-3">
+                        <label for="password">Conferma Password</label>
+                        <input type="password" class="form-control" id="conferma_password"
+                            placeholder="Inserisci nuovamente la Password" name="conferma_password"
+                            formControlName="conferma_password">
+
+                        <p class="text-danger" *ngIf="this.form.controls.conferma_password.touched && 
+                        this.form.controls.conferma_password.hasError('required')">
+                            Conferma password obbligatoria.
+                        </p>
+                        <p class="text-danger"
+                            *ngIf="form.errors?.['mismatch'] && form.controls.conferma_password.touched">
+                            Le password non coincidono.
+                        </p>
+
+                    </div>
+
+
+                    <div class="form-group my-3">
+                        <label for="telefono">Inserisci Telefono</label>
+                        <input type="text" class="form-control" id="telefono" placeholder="Inserisci numero telefono"
+                            name="telefono" formControlName="telefono">
+                        <p class="text-danger" *ngIf="this.form.controls.telefono.touched && 
+                        this.form.controls.telefono.hasError('required')">
+                            Telefono Obbligatorio.
+                        </p>
+                        <p class="text-danger" *ngIf="this.form.controls.telefono.touched && 
+                        this.form.controls.telefono.hasError('pattern')">
+                            il telefono deve essere nel formato +39 XXX XXXXXXX
+                        </p>
+                    </div>
+
+                    <div class="form-check my-3">
+                        <input class="form-check-input" type="checkbox" value="" id="consenso_trattamento_dati"
+                            formControlName="trattamento_dati">
+                        <label class="form-check-label" for="consenso_trattamento_dati">
+                            Consenso trattamento dati personali
+                        </label>
+                        <p class="text-danger"
+                            *ngIf="this.form.controls.trattamento_dati.value === false && this.form.controls.trattamento_dati.touched">
+                            Obbligatorio accettare trattamento dati.
+                        </p>
+                    </div>
+
+                    <button [disabled]="!this.isFormValid()" type="submit" class="btn btn-primary">Registrati</button>
                     <div class="mt-3">
                         <a (click)="this.goToLogin()" class="link pointer"> Sei già registrato? Effettua il
                             login</a>
