fix registration logic and toast

--- a/src/app/components/registrazione/registrazione.component.html
+++ b/src/app/components/registrazione/registrazione.component.html
@@ -1,5 +1,8 @@
 <div class="min-vh-100 d-flex justify-content-center sfondo">
     <div class="container">
+
+        <p-toast key="toastRegistration" />
+
         <div class="row justify-content-center">
             <div class="col-12">
                 <div class="text-center">
