--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,8 @@
 <div class="min-vh-100 d-flex justify-content-center sfondo">
     <div class="container">
+
+        <p-toast key="toastLogin" />
+
         <div class="row justify-content-center">
             <div class="col-12">
                 <div class="text-center">
@@ -12,22 +15,31 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
 
-                <form class=" border-black p-5 rounded-5 shadow mb-4">
+                <form [formGroup]="form" (ngSubmit)="onSubmit()" class="border-black p-5 rounded-5 shadow mb-4">
                     <div>
                         <h2>Login</h2>
                     </div>
                     <div class="form-group my-3">
                         <label for="email">Inserisci Email</label>
                         <input type="email" class="form-control" id="email" aria-describedby="emailHelp" name="email"
-                            placeholder="Inserisci la tua email">
+                            placeholder="Inserisci la tua email" formControlName="email">
 
+                        <p class="text-danger" *ngIf="this.form.controls.email.touched &&
+                            this.form.controls.email.hasError('required')">
+                            email obbligatoria.
+                        </p>
                     </div>
                     <div class="form-group my-3">
                         <label for="password">Inserisci Password</label>
                         <input type="password" class="form-control" id="password" placeholder="Inserisci password"
-                            name="password">
+                            name="password" formControlName="password">
+
+                        <p class="text-danger" *ngIf="this.form.controls.password.touched &&
+                            this.form.controls.password.hasError('required')">
+                            password obbligatoria.
+                        </p>
                     </div>
-                    <button type="submit" class="btn btn-primary">Login</button>
+                    <button [disabled]="!this.isFormValid()" type="submit" class="btn btn-primary">Login</button>
                     <div class="mt-3">
                         <a (click)="this.goToRegistrazione()" class="link pointer"> Non sei ancora registrato?
                             Registrati</a>
