--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,3 @@
-<app-navbar></app-navbar>
+<app-navbar (emitVal)="this.getBoolean($event)"></app-navbar>
+<app-side-bar [sidebarVisible]="this.booleanEmitted"></app-side-bar>
 <router-outlet></router-outlet>
