aggiunto interceptor per invio token al server per autenticazione

--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -1,11 +1,16 @@
 <div class="card flex justify-content-center">
     <p-sidebar [closeOnEscape]="true" [(visible)]="sidebarVisible">
-        <h3>Sidebar</h3>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        </p>
+        <h3>Features disponibili</h3>
+
+        <button class="btn btn-transparent scale">
+            <i class="pi pi-angle-right" style="color: #708090"></i>
+            Crea Curriculum</button>
+        <button class="btn btn-transparent scale">
+            <i class="pi pi-angle-right" style="color: #708090"></i>
+            Vai ai tuoi Curriculum</button>
+        <button class="btn btn-transparent scale">
+            <i class="pi pi-angle-right" style="color: #708090"></i>
+            Vai al profilo</button>
     </p-sidebar>
 
 </div>
