--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works!</p>
+<div class="container-fluid sfondo">
+    <div class="row">
+        <div class="col-12">
+
+        </div>
+    </div>
+</div>
