--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,11 @@
-<div class="container-fluid sfondo">
-    <div class="row">
-        <div class="col-12">
-
+<ng-container *ngIf="this.AllCvList && this.AllCvList?.listaCV?.length === 0">
+    <div class="container-fluid sfondo min-vh-100">
+        <div class="row h-100 justify-content-center align-items-center">
+            <div class="col-12 col-md-6 col-lg-6">
+                <div class="bg-white border border-2 rounded-5 p-5 mt-5">
+                    <p class="fw-bold fs-5">Nessun curriculum presente. Creane uno nuovo.</p>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</ng-container>
