--- a/src/app/components/get-all-cv-user/get-all-cv-user.component.html
+++ b/src/app/components/get-all-cv-user/get-all-cv-user.component.html
@@ -1,4 +1,4 @@
-<!-- <ng-container *ngIf="this.AllCvList && this.AllCvList?.listaCV?.length === 0">
+<ng-container *ngIf="this.AllCvList && this.AllCvList?.listaCV?.length === 0">
     <div class="container-fluid sfondo min-vh-100">
         <div class="row h-100 justify-content-center align-items-center">
             <div class="col-12 col-md-6 col-lg-6">
@@ -29,8 +29,16 @@
                                 <p class="mb-1"><strong>Esperienze:</strong> {{ cv.esperienze_Precedenti }}</p>
                                 <p class="mb-1"><strong>Competenze:</strong> {{ cv.competenze }}</p>
                                 <p class="mb-1"><strong>Istruzione:</strong> {{ cv.istruzione }}</p>
-                                <p class="mb-1"><strong>Lingue:</strong> {{ cv.lingueConosciute }}</p><button
-                                    class="btn btn-secondary">Scarica PDF</button>
+                                <p class="mb-1"><strong>Lingue:</strong> {{ cv.lingueConosciute }}</p>
+                                <div class="d-flex gap-1 my-3">
+                                    <button (click)="this.scaricaPdf(cv)" class="btn btn-primary">
+                                        Scarica PDF
+                                    </button>
+                                    <button (click)="this.scaricaPdf(cv)" class="btn btn-primary">
+                                        modifica PDF
+                                    </button>
+                                </div>
+
                             </div>
                         </div>
 
@@ -41,4 +49,4 @@
 
         </div>
     </div>
-</ng-container> -->
+</ng-container>
