--- a/src/app/components/get-all-cv-user/get-all-cv-user.component.html
+++ b/src/app/components/get-all-cv-user/get-all-cv-user.component.html
@@ -34,7 +34,7 @@
                                     <button (click)="this.scaricaPdf(cv)" class="btn btn-primary">
                                         Scarica PDF
                                     </button>
-                                    <button (click)="this.scaricaPdf(cv)" class="btn btn-primary">
+                                    <button (click)="this.goToModificaCv(cv.id_cv)" class="btn btn-primary">
                                         modifica PDF
                                     </button>
                                 </div>
