--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link pointer" aria-current="page">Home</a>
+                    <a class="nav-link pointer" aria-current="page" (click)="this.goHome()">Home</a>
                 </li>
                 <li class="nav-item">
                     <a (click)="this.emitBoolean()" class="nav-link pointer">Features</a>
