--- a/src/app/components/modifica-cv/modifica-cv.component.html
+++ b/src/app/components/modifica-cv/modifica-cv.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid sfondo min-vh-100">
+<div class="container-fluid sfondo custom-vh">
 
-    <div class="row justify-content-center align-items-center min-vh-100">
+    <div class="row justify-content-center align-items-center custom-vh">
         <div class="col-11 col-md-8 col-lg-6">
             <form [formGroup]="form" (ngSubmit)="onSubmit()" class=" border-black p-5 rounded-5 shadow mb-4">
                 <div>
