--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -5,7 +5,7 @@
         <button class="btn btn-transparent scale">
             <i class="pi pi-angle-right" style="color: #708090"></i>
             Crea Curriculum</button>
-        <button class="btn btn-transparent scale">
+        <button (click)="this.goToGetAllCv()" class="btn btn-transparent scale">
             <i class="pi pi-angle-right" style="color: #708090"></i>
             Vai ai tuoi Curriculum</button>
         <button class="btn btn-transparent scale">
