--- a/src/app/components/modifica-cv/modifica-cv.component.html
+++ b/src/app/components/modifica-cv/modifica-cv.component.html
@@ -1,5 +1,7 @@
 <div class="container-fluid sfondo custom-vh">
 
+    <p-toast key="toastEditCv" />
+
     <div class="row justify-content-center align-items-center custom-vh">
         <div class="col-11 col-md-8 col-lg-6">
             <form [formGroup]="form" (ngSubmit)="onSubmit()" class=" border-black p-5 rounded-5 shadow mb-4">
@@ -44,7 +46,7 @@
                         formControlName="esperienzePrecedenti">
                     <p class="text-danger" *ngIf="this.form.controls.esperienzePrecedenti.touched &&
                         this.form.controls.esperienzePrecedenti.hasError('required')">
-                        Password obbligatoria.
+                        Esperienze lavorative obbligatorie.
                     </p>
 
                 </div>
