--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -2,7 +2,7 @@
     <p-sidebar [closeOnEscape]="true" [(visible)]="sidebarVisible">
         <h3>Features disponibili</h3>
 
-        <button class="btn btn-transparent scale">
+        <button (click)="goToCreaCv()" class="btn btn-transparent scale">
             <i class="pi pi-angle-right" style="color: #708090"></i>
             Crea Curriculum</button>
         <button (click)="this.goToGetAllCv()" class="btn btn-transparent scale">
