--- a/src/app/components/get-all-cv-user/get-all-cv-user.component.html
+++ b/src/app/components/get-all-cv-user/get-all-cv-user.component.html
@@ -1,9 +1,12 @@
 <ng-container *ngIf="this.AllCvList && this.AllCvList?.listaCV?.length === 0">
     <div class="container-fluid sfondo min-vh-100">
+
+        <p-toast key="toastGetAllCv" />
+
         <div class="row h-100 justify-content-center align-items-center">
             <div class="col-12 col-md-6 col-lg-6">
                 <div class="bg-white border border-2 rounded-5 p-5 mt-5">
-                    <p class="fw-bold fs-5">Nessun curriculum presente. Creane uno nuovo.</p>
+                    <p class="fw-bold fs-5 m-0">Nessun curriculum presente per questo utente. Creane uno nuovo.</p>
                 </div>
             </div>
         </div>
