--- a/src/app/components/get-all-cv-user/get-all-cv-user.component.html
+++ b/src/app/components/get-all-cv-user/get-all-cv-user.component.html
@@ -35,10 +35,13 @@
                                 <p class="mb-1"><strong>Lingue:</strong> {{ cv.lingueConosciute }}</p>
                                 <div class="d-flex gap-1 my-3">
                                     <button (click)="this.scaricaPdf(cv)" class="btn btn-primary">
-                                        Scarica PDF
+                                        <i class="pi pi-download" style="font-size: 1rem"></i>
                                     </button>
                                     <button (click)="this.goToModificaCv(cv.id_cv)" class="btn btn-primary">
-                                        modifica PDF
+                                        <i class="pi pi-file-edit" style="font-size: 1rem"></i>
+                                    </button>
+                                    <button class="btn btn-danger">
+                                        <i class="pi pi-trash" style="font-size: 1rem"></i>
                                     </button>
                                 </div>
 
