--- a/src/app/components/get-all-cv-user/get-all-cv-user.component.html
+++ b/src/app/components/get-all-cv-user/get-all-cv-user.component.html
@@ -40,7 +40,7 @@
                                     <button (click)="this.goToModificaCv(cv.id_cv)" class="btn btn-primary">
                                         <i class="pi pi-file-edit" style="font-size: 1rem"></i>
                                     </button>
-                                    <button (click)="this.showModal()" class="btn btn-danger">
+                                    <button (click)="this.showModal(cv)" class="btn btn-danger">
                                         <i class="pi pi-trash" style="font-size: 1rem"></i>
                                     </button>
                                 </div>
@@ -55,7 +55,9 @@
             <!-- modale utilizzato per la conferma cancellazione del cv  -->
 
             <app-modal-generic [visible]="this.mostraModale">
-                <app-conferma-cancella-cv (nascondi)="prendiValoreNascondi($event)"></app-conferma-cancella-cv>
+                <app-conferma-cancella-cv [id_cv]="this.id_cv_selected" [dataCreazioneCv]="this.dataCreazioneCvSelected"
+                    [titoloCv]="this.titoloCvSelected" (nascondi)="prendiValoreNascondi($event)"
+                    (notificaCancellazione)="this.getNotificaCancellazione($event)"></app-conferma-cancella-cv>
             </app-modal-generic>
 
         </div>
