--- a/src/app/components/modifica-cv/modifica-cv.component.html
+++ b/src/app/components/modifica-cv/modifica-cv.component.html
@@ -29,7 +29,7 @@
                     </p>
                 </div>
                 <div class="form-group my-3">
-                    <label for="istruzione">Inserisci livello di isruzione istruzione</label>
+                    <label for="istruzione">Inserisci livello di istruzione</label>
                     <input type="text" class="form-control" id="istruzione" aria-describedby="istruzione"
                         name="istruzione" placeholder="Inserisci il tuo livello di istruzione"
                         formControlName="istruzione">
