--- a/src/app/components/crea-cv/crea-cv.component.html
+++ b/src/app/components/crea-cv/crea-cv.component.html
@@ -76,7 +76,7 @@
 
                 </div>
 
-                <button [disabled]="!this.isFormValid()" type="submit" class="btn btn-primary">Invia modifiche</button>
+                <button [disabled]="!this.isFormValid()" type="submit" class="btn btn-primary">Crea curriculum</button>
             </form>
         </div>
     </div>
