--- a/src/app/components/modal-generic/modal-generic.component.html
+++ b/src/app/components/modal-generic/modal-generic.component.html
@@ -1,3 +1,3 @@
-<p-dialog header="Edit Profile" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
+<p-dialog closable="false" [modal]="true" [(visible)]="visible" [style]="{ width: '25rem' }">
     <ng-content></ng-content>
 </p-dialog>
