--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -10,6 +10,15 @@
             Vai ai tuoi Curriculum</button>
         <button class="btn btn-transparent scale">
             <i class="pi pi-angle-right" style="color: #708090"></i>
+            Ricerca cv per competenze</button>
+        <button (click)="this.goToricercaEsperienza()" class="btn btn-transparent scale">
+            <i class="pi pi-angle-right" style="color: #708090"></i>
+            Ricerca cv per Esperienza</button>
+        <button class="btn btn-transparent scale">
+            <i class="pi pi-angle-right" style="color: #708090"></i>
+            Ricerca cv per nome candidato</button>
+        <button class="btn btn-transparent scale">
+            <i class="pi pi-angle-right" style="color: #708090"></i>
             Vai al profilo</button>
     </p-sidebar>
 
