ricerca per competenze e esperienze fatto alla buona , biolerplate code

--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -8,7 +8,7 @@
         <button (click)="this.goToGetAllCv()" class="btn btn-transparent scale">
             <i class="pi pi-angle-right" style="color: #708090"></i>
             Vai ai tuoi Curriculum</button>
-        <button class="btn btn-transparent scale">
+        <button (click)="this.gotoRicercaCompetenza()" class="btn btn-transparent scale">
             <i class="pi pi-angle-right" style="color: #708090"></i>
             Ricerca cv per competenze</button>
         <button (click)="this.goToricercaEsperienza()" class="btn btn-transparent scale">
