--- a/src/app/components/ricerca-cv-competenza/ricerca-cv-competenza.component.html
+++ b/src/app/components/ricerca-cv-competenza/ricerca-cv-competenza.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid min-vh-100 sfondo">
     <div class="row w-100 justify-content-center p-4">
         <div class="col-12">
-            <h2 class="text-center">Inserisci esperienze da ricercare</h2>
+            <h2 class="text-center">Inserisci competenze da ricercare</h2>
         </div>
         <div class="col-12 col-md-8 col-lg-6">
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="esperienze" aria-describedby="esperienze"
-                        placeholder="inserisci esperienze da cercare" required formControlName="esperienze">
+                    <input type="text" class="form-control" id="competenze" aria-describedby="competenze"
+                        placeholder="inserisci competenze da cercare" required formControlName="competenze">
 
                 </div>
                 <button [disabled]="!this.isFormValid()" type="submit" class="btn btn-primary mt-2">Ricerca
