componente visualizza cv card orizzontale

--- a/src/app/components/get-all-cv-user/get-all-cv-user.component.html
+++ b/src/app/components/get-all-cv-user/get-all-cv-user.component.html
@@ -40,6 +40,9 @@
                                     <button (click)="this.goToModificaCv(cv.id_cv)" class="btn btn-primary">
                                         <i class="pi pi-file-edit" style="font-size: 1rem"></i>
                                     </button>
+                                    <button (click)="this.goToVisualizzaCv(cv.id_cv)" class="btn btn-primary">
+                                        <i class="pi pi-eye" style="font-size: 1rem"></i>
+                                    </button>
                                     <button (click)="this.showModal(cv)" class="btn btn-danger">
                                         <i class="pi pi-trash" style="font-size: 1rem"></i>
                                     </button>
