--- a/src/app/components/visualizza-cv/visualizza-cv.component.html
+++ b/src/app/components/visualizza-cv/visualizza-cv.component.html
@@ -1,4 +1,4 @@
-<div class="container my-5">
+<div class="container-fluid sfondo p-4">
     <div class="row justify-content-center">
         <div class="col-12 col-md-8 col-lg-6">
             <div class="card shadow-sm">
@@ -7,10 +7,24 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-subtitle mb-3">Informazioni Generali</h5>
-                    <p class="mb-1"><strong>nome:</strong> {{ this.prendiNome(cv?.proprietarioCV) }}</p>
-                    <p class="mb-1"><strong>cognome:</strong> {{ this.prendiCognome(cv?.proprietarioCV) }}</p>
-                    <!-- <p class="mb-1"><strong>Email:</strong> {{ cv.email }}</p>
-                    <p class="mb-1"><strong>Telefono:</strong> {{ cv.telefono }}</p> -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div>
+                                <p class="mb-1"><strong>nome:</strong> {{ this.prendiNome(cv?.proprietarioCV) }}</p>
+                                <p class="mb-1"><strong>cognome:</strong> {{ this.prendiCognome(cv?.proprietarioCV) }}
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div>
+                                <p class="mb-1"><strong>Email:</strong> {{ cv?.email }}</p>
+                                <p class="mb-1"><strong>Telefono:</strong> {{ cv?.telefono }}</p>
+                            </div>
+                        </div>
+                    </div>
+
+
+
 
                     <hr>
 
