--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -20,6 +20,9 @@
         <button class="btn btn-transparent scale">
             <i class="pi pi-angle-right" style="color: #708090"></i>
             Vai al profilo</button>
+        <button (click)="this.goToCaricaCvAdmin()" class="btn btn-transparent scale">
+            <i class="pi pi-angle-right" style="color: #708090"></i>
+            Carica curriculum in formato .pdf (ADMIN)</button>
     </p-sidebar>
 
 </div>
