implementazione carica cv admin creazione componente ricerca cv per nome candidato

--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -14,7 +14,7 @@
         <button (click)="this.goToricercaEsperienza()" class="btn btn-transparent scale">
             <i class="pi pi-angle-right" style="color: #708090"></i>
             Ricerca cv per Esperienza</button>
-        <button class="btn btn-transparent scale">
+        <button (click)="this.gotoRicercaCv_NomeCandidato()" class="btn btn-transparent scale">
             <i class="pi pi-angle-right" style="color: #708090"></i>
             Ricerca cv per nome candidato</button>
         <button class="btn btn-transparent scale">
