--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,9 +23,13 @@
             <p class="m-0">
                 Benvenuto, {{this.nomeUtente?.toLocaleUpperCase()}} ({{this.ruolo}})
             </p>
+
+
         </div>
+        <img class="logo d-inline mx-3 rounded rounded-circle" src="http://localhost:8081/images/default.jpg" alt="img">
         <button (click)="this.doLogout()" class="pointer d-flex align-items-center btn">
             <i class="pi pi-sign-out ms-1" style="font-size: 1.3rem"></i>
         </button>
     </div>
+
 </nav>
