--- a/src/app/components/shared/orizontal-card/orizontal-card.component.html
+++ b/src/app/components/shared/orizontal-card/orizontal-card.component.html
@@ -15,6 +15,8 @@
                 <p class="card-text"><strong>Competenze:</strong> {{ cv.competenze }}</p>
                 <p class="card-text"><strong>Istruzione:</strong> {{ cv.istruzione }}</p>
                 <p class="card-text"><strong>Lingue:</strong> {{ cv.lingueConosciute }}</p>
+                <p class="card-text"><strong>Data creazione:</strong> {{ cv.created_at | date }}</p>
+
             </div>
         </div>
         <div class="col-md-3">
