--- a/src/app/components/modifica-img-profilo/modifica-img-profilo.component.html
+++ b/src/app/components/modifica-img-profilo/modifica-img-profilo.component.html
@@ -5,5 +5,5 @@
         <input type="file" class="form-control" id="img_profilo" name="img_profilo">
     </div>
     <button type="submit">Carica</button>
-    <button type="button">chiudi</button>
+    <button (click)="this.emitClose()" type="button">chiudi</button>
 </form>
