--- a/src/app/components/crea-cv/crea-cv.component.html
+++ b/src/app/components/crea-cv/crea-cv.component.html
@@ -103,7 +103,7 @@
 
                 </div>
 
-                <button type="submit" class="btn btn-primary">Crea curriculum</button>
+                <button [disabled]="!this.isFormValid()" type="submit" class="btn btn-primary">Crea curriculum</button>
             </form>
         </div>
     </div>
